manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hellosmile-deployment
  labels:
    app: hellosmile
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hellosmile
  template:
    metadata:
      labels:
        app: hellosmile
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - hellosmile
            topologyKey: "kubernetes.io/zone"
      containers:
      - name: smile
        image: <AWSACCOUNTNUMBER>.dkr.ecr.us-east-1.amazonaws.com/smile:latest
        readinessProbe:
          httpGet:
            path: /
            port: 5000
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /
            port: 5000
          initialDelaySeconds: 10
          periodSeconds: 15
        resources:
          requests:
            memory: 300Mi
            cpu: 500m
        ports:
        - containerPort: 5000
