manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hellosmile-service   
spec:
  type: ClusterIP
  selector:
   app: hellosmile
  ports:
   - port: 80
     targetPort: 5000
